# sd-team-h

./: .gitignore  README.md
route_finder/: README.md  docker-compose.yml  generate_route.sh
route_finder/data/: README.md  download_srtm.py  setup_add_isolation.sh  setup_add_ndvi.sh  setup_add_ndwi.sh  setup_add_shadow.sh  setup_add_slope.sh  setup_db.sh  setup_generate_route.sh
route_finder/data/satellite/: 2018-04-10_SAR_3320_RGB.tif  2018-12-14_54SUE_NDVI_3320.tif  2018-12-14_54SUE_NDWI_3320.tif  2018-12-14_54SUE_RGB_3320.tif
route_finder/deploy/: Dockerfile  README.md  deploy.sh
route_finder/frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
route_finder/frontend/src/: App.tsx  main.tsx
route_finder/frontend/src/components/: Footer.tsx  Header.tsx  Layout.tsx
route_finder/frontend/src/components/pages/: Result.stories.ts  Result.tsx  Top.tsx
route_finder/frontend/src/components/ui/: LoadingSpinner.stories.ts  LoadingSpinner.tsx  LocationPicker.stories.ts  LocationPicker.tsx  RouteMap.stories.ts  RouteMap.tsx  SearchIcon.tsx  SearchInput.tsx
route_finder/frontend/src/lib/: Constants.ts  SearchResponse.ts
route_finder/server/: .env.prd  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
route_finder/server/src/: constants.py  landmarks.py  main.py  mock_response.py  models.py  request_response_data.py
route_finder/server/src/server/: add_explanation.py  calc_weight.py  calc_weight_20241127.py  calculate_weights.py  extract_landmarks.py  generate_description.py  get_routes.py
(+5 files in other folders)
